index.css
* {
    margin: 0;
    padding: 0;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

body, html {
    width: 100vw;
    height: 100vh;
    overflow-x: hidden;
    background: url('./images/backgroundImage1.jpeg');
    background-size: cover;
}

#wrapper {
     background-color: white;
}

hr {
    height: 1px;
    border: none;
    color: #b4272f;
    background-color: #b4272f;
    width: 50%;
    text-align: center;
    margin: 0 auto;
    margin-top: 20px;
    margin-bottom: 20px;
}

img {
    width: 50vw;
    height: auto;
    margin: 0 auto;
}

h1, h2, h3, h4, h5, h6 {
    padding: 0 0;
    font-weight: lighter;
    color: #b4272f;
}

h1 {
    font-size: 1.8rem;
}

h2 {
    font-size: 1.7rem;
}

h3 {
    font-size: 1.6rem;
}

h4 {
    font-size: 1.4rem;
}

h5 {
    font-size: 1.3rem;
}

h6 {
    font-size: 1rem;
}

header {
    text-align: center;
}

#date {
    color: gray;
}

nav {
    text-align: center;
    padding: 10px;
}

nav ul {
    display: flex;
    flex-direction: row;
}

nav li {
    text-transform: uppercase;
}

nav > a,:visited,:focus {
    padding: 0px 5px;
    text-decoration: none;
    color: black;
    text-transform: uppercase;
}

nav > a:hover {
    font-weight: bold;
    color: #b4272f;
}

nav > a::after {
    display: inline-block;
    content: " ";
    font-weight: bold;
    height: 0;
    overflow: hidden;
    visibility: hidden;
}

#logo {
    object-fit: contain;
}

main {
    
}

main > section {
    padding: 0 3vw;
    width: calc(100%-6vw);
    display: flex;
    flex-direction: column;
}

main > section > * {
    padding: 15px 3vw;
}

main > section > iframe {
    margin: 10px auto;
    width: calc(100% - 6vw);
    height: 27vw;
}

.excursions {
    display: grid;
    grid-gap: 1vmin;
    grid-auto-columns: 1fr;
    grid-template-columns: 1fr;
}

.excursions > h4 {
    grid-column-start: 1;
    grid-column-end: -1;
}

.excursions > article {
    display: grid;
    grid-gap: 1vmin;
    grid-auto-columns: 1fr;
    grid-template-columns: 1fr;

    border: 1px solid #b4272f;
    padding: 1vmin;
}

.excursions > article > h5 {
    grid-column: span 2;
}

.excursions > article > img {
    grid-column: span 2;
    align-self: center;
    justify-self: center;
    margin: 2vmin;
}
.excursions > article > p {
    grid-column: span 2;
    text-align: justify;
}

.sponsoring-logos {
    display: grid;
    grid-auto-flow: column dense;
    grid-template-columns: repeat(auto-fit, 5vmax);
    grid-template-rows: repeat(auto-fit, 5vmax);
    --aspect-width: 4;
    --aspect-height: 2
}

.sponsoring-logos::before {
    /* Fix to square up the grid cells */
    content: '';
    width: 0;
    padding-bottom: 100%;
    grid-row: 1 / 1;
    grid-column: 1 / 1;
  }

.sponsoring-logos > * {
    justify-self: center;
    align-self: center;
    width: 100%;
    min-width: 5vmax;
    height: 100%;
    min-height: 5vmax;
    grid-column: span var(--aspect-width, 1);
    grid-row: span var(--aspect-height, 1);
}

footer {
    text-align: center;
    padding: 1em;
}

/* Media queries */
@media (min-width: 600px) {
    #wrapper {
        width: 60vw;
        margin: 10vw auto;
        box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
    }

    .excursions > article {
        display: grid;
        grid-gap: 1vw;
        grid-template-columns: 12vw 1fr;
        grid-auto-columns: 12vw 1fr;
        grid-template-rows: auto 1fr;
        grid-auto-rows: auto 1fr;
    
        border: 1px solid #b4272f;
        padding: 1vmin;
    }

    .excursions > article > img {
        width: 10vw;
        height: auto;
        grid-column: span 1;
    }
    
    .excursions > article > p {
        grid-column: span 1;
        text-align: initial;
    }
}

@media (min-width: 1150px) {
    .excursions {
        display: grid;
        grid-gap: 2vmin;
        grid-auto-columns: 1fr 1fr;
        grid-template-columns: 1fr 1fr;
    }
}

